Fix 2 header bugs on mobile devices
- Bug fixed: Archive pagination buttons display on top of header in safari for iPhone
- Bug fixed: Archive header is too tall in chrome for iPhone

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2236,6 +2236,10 @@ body:not(.page-template) .post-title {
         width: 100%;
     }
 
+    .paged .main-header {
+        max-height: 170px;
+    }
+
 }
 
 
